--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=Popcorn-Pal
+spring.datasource.url = jdbc:postgresql://localhost:5432/popcorn_pal
+spring.datasource.username = edwin
+spring.datasource.password = password
+
+spring.thymeleaf.cache = false
+
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.show-sql = true
